--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
