--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,4 +100,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.prof.rssparser:rssparser:1.3.1'
 
+    // Work Manager
+    implementation "androidx.work:work-runtime-ktx:$workmanager_version"
+
 }
