--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         //version_retrofit = "2.5.0"
         //version_retrofit_coroutines_adapter = "0.9.2"
         version_recyclerview = "1.1.0"
+        workmanager_version = "2.3.4"
     }
 
     repositories {
