--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
 
+    // Html TextView with Images
+    implementation 'org.sufficientlysecure:html-textview:3.9'
+
 }
