--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "com.george.fs_korinthias"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 5
-        versionName "5.0"
+        versionCode 6
+        versionName "6.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -98,17 +98,18 @@ dependencies {
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    //JSoup
+    // JSoup
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'com.prof.rssparser:rssparser:1.3.1'
 
     // Work Manager
     implementation "androidx.work:work-runtime-ktx:$workmanager_version"
 
-    // Firebase analytics
+    // Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.5'
     implementation 'com.google.firebase:firebase-crashlytics:17.0.0-beta04'
+    implementation 'com.google.firebase:firebase-database-ktx:19.2.1'
 
     // Html TextView with Images
     implementation 'org.sufficientlysecure:html-textview:3.9'
