--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,11 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.george.fs_antarktikis"
+        applicationId "com.george.fs_korinthias"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 13
-        versionName "13.0"
+        versionCode 14
+        versionName "14.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
