--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,13 @@ dependencies {
     // CircularImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    // Koin for Kotlin
+    implementation "org.koin:koin-core:$koin_version"
+    // Koin for Android
+    implementation "org.koin:koin-android:$koin_version"
+    // Koin Android Scope features
+    implementation "org.koin:koin-android-scope:$koin_version"
+    // Koin Android ViewModel features
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
+
 }
