--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         // navigation where the versions of the plugin needs to be the same as the version of the
         // library defined in the app Gradle file
 
-        //version_glide = "4.8.0"
+        koin_version = "2.1.5"
         kotlin_version = "1.3.71"
         version_kotlin_coroutines = "1.1.0"
         version_lifecycle_extensions = "2.0.0"
