--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,6 +131,10 @@ dependencies {
     implementation "org.koin:koin-android-scope:$koin_version"
     // Koin Android ViewModel features
     implementation "org.koin:koin-android-viewmodel:$koin_version"
+    // Koin for Unit tests
+    testImplementation "org.koin:koin-test:$koin_version"
+    // required if you want to use Mockito for unit tests
+    testImplementation 'org.mockito:mockito-core:2.7.22'
 
     // TF Lite
     implementation('org.tensorflow:tensorflow-lite:2.1.0')
